# wave-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Makefile  README.md  docker-compose.yml  hello.py  logging_config.ini  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
docker/postgres/: init.sql
docs/: api-usage.md  authentication.md  database-schema.md
logs/: .gitignore
src/wave_backend/: server.py
src/wave_backend/api/: main.py
src/wave_backend/api/middleware/: versioning.py
src/wave_backend/api/routes/: experiment_data.py  experiment_types.py  (+3 more)
src/wave_backend/auth/: __init__.py  config.py  decorator.py  errors.py  roles.py  unkey_client.py
src/wave_backend/models/: database.py  database_config.py  models.py
src/wave_backend/schemas/: column_types.py  schemas.py  search_schemas.py
src/wave_backend/services/: experiment_data.py  experiment_types.py  experiments.py  search.py  tags.py
src/wave_backend/utils/: constants.py  logging.py  versioning.py
tests/large/: conftest.py  test_auth_e2e.py  test_auth_edge_cases.py  test_auth_environment.py  test_auth_integration.py
tests/medium/: __init__.py  conftest.py  test_experiment_data_crud.py  test_experiment_types.py  test_experiments.py  test_search_api.py  test_search_service.py  test_single_db.py  test_tags.py  test_versioning_integration.py
tests/medium/e2e/: __init__.py  conftest.py  test_experiment_data_basic_crud.py  test_experiment_data_e2e.py  test_experiment_data_isolation.py  test_experiment_data_management.py  test_experiment_data_queries.py  test_experiment_data_schema.py  test_experiment_discovery.py
tests/small/: conftest.py  test_auth_cache.py  test_basic_api.py  test_experiment_data.py  test_fastapi.py  test_schemas_validation.py  test_versioning.py
